SFDC Automation/src/objects/PartialWinRateSheet__c.object
<CustomObject>
    <description>Contains the list of Rate Sheets which were not booked</description>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <picklist>
            <controllingField>Deal_lost_to_Won_from_whom__c</controllingField>
            <picklistValues>
                <fullName>ComCar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dixie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gatorlease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hogan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IdealLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I don&apos;t know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interstate Natn&apos;l</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NatioanlLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OEM (pls specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (pls specify)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PacLease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penske</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rollins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>We need the values here</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Deal_Summary_Name__c</fullName>
        <description>Contains the DealSummaryName (Name from teh Deal_Summary__c object)</description>
        <label>Deal Summary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_Summary__c</fullName>
        <description>Contains the Deal_Summary # (ext_dealsummary_id__c from the Deal_Summary__c object)</description>
        <label>Deal Summary #</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deal_lost_to_Won_from_whom__c</fullName>
        <label>Deal lost to/ Won from whom</label>
        <picklist>
            <controllingField>Reason_Won_Lost__c</controllingField>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ownership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline inactive cleanup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Common Carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not lost. Duplicate pipeline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To mark the records as processed once user submit button</description>
        <label>IsProcessed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Just used on the page</description>
        <label>IsSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTaskCreated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if a task has been created to this Partial Win</description>
        <label>IsTaskCreated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Local_Provider_Name__c</fullName>
        <label>Local Provider Name</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>PartialWinRateSheets</relationshipLabel>
        <relationshipName>PartialWinRateSheets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Original_Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Decision Maker</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>PartialWinRateSheets</relationshipLabel>
        <relationshipName>PartialWinRateSheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PartialWinRateSheets</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Sheet_Name__c</fullName>
        <description>Contains the name of the RateSheet (Rate_Sheet_Name__c from the Rate_Sheet__c object)</description>
        <label>Rate Sheet Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rate_Sheet__c</fullName>
        <description>Contains the Rate Sheet # (ext_ratesheet_id__c from the Rate_Sheet__c object)</description>
        <label>Rate Sheet #</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_Won_Lost__c</fullName>
        <label>Reason Won/Lost</label>
        <picklist>
            <picklistValues>
                <fullName>Less expensive Option Available</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory Maintenance Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet downsizing by a split fleet customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory breakdown service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to meet business needs/provide flexibility/ act as partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory billing and invoicing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsatisfactory  account management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company declined due to credit - Customer unwilling to agree credi-related stipulations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient proximity/ convenience of service location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ryder closed location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet downsizing by a 100% Ryder Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer closed location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in transportation model to common carrier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company declined due to credit-not credit worthy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bankruptcy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company acquisition or Management change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Lost - Duplicate Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Declined due to credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ability to Extend Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Company out of business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Referral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economic Conditions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet Downsize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Don&apos;t Know</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I Don&apos;t Remember</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Issue with Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Length of lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Alternate Pricing Option</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Business Granted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won Business about to book this month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Won Business about to book next month</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_this_competitor_the_incumbent__c</fullName>
        <label>Was this competitor the incumbent?</label>
        <picklist>
            <controllingField>Competitor__c</controllingField>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ext_ref_id__c</fullName>
        <description>Contains the external id which is composed of Opportunity# and RateSheet#</description>
        <externalId>true</externalId>
        <label>ext_ref_id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>PartialWinRateSheet</label>
    <nameField>
        <label>PartialWinRateSheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PartialWinRateSheets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>